--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
         <img class="w-[200px]" src="/Assets/logo-vegas.webp" alt="Logo Casino Vegas 365">
         <p class=" text-3xl "> 𝐄𝐍𝐕Ì𝐀𝐍𝐎𝐒 𝐔𝐍 𝐖𝐇𝐀𝐓𝐒𝐀𝐏𝐏 <br>  </p>
         <div class="flex flex-col justify-center items-center slef-center gap-2">
-            <a target="_blank" href="WSPP AQUI"><button class="boton border-[#4700cc] border-[2px] p-4 rounded-xl bg-black font-bold justify-around gap-3 flex text-xl font-bebas   self-center">CREAR MI USUARIO <img class="w-8" src="/Assets/whatsapp-vegas.webp" alt=""></button></a>
+            <a target="_blank" href="https://wa.link/meeh66"><button class="boton border-[#4700cc] border-[2px] p-4 rounded-xl bg-black font-bold justify-around gap-3 flex text-xl font-bebas   self-center">CREAR MI USUARIO <img class="w-8" src="/Assets/whatsapp-vegas.webp" alt=""></button></a>
             <p>Mínimo de carga $1000</p>
         </div>
         <h1 class="font-semibold text-2xl">💰 PROMOS ACTIVAS 💰</h1>
