--- a/index.html
+++ b/index.html
@@ -1,23 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Meta Pixel Code -->
-<script>
-!function(f,b,e,v,n,t,s)
-{if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};
-if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
-n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];
-s.parentNode.insertBefore(t,s)}(window, document,'script',
-'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '500845102845673');
-fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=500845102845673&ev=PageView&noscript=1"
-/></noscript>
-<!-- End Meta Pixel Code -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="index.css">
@@ -72,7 +55,7 @@ src="https://www.facebook.com/tr?id=500845102845673&ev=PageView&noscript=1"
         <img class="w-[200px]" src="/Assets/logo-vegas.webp" alt="Logo Casino Vegas 365">
         <p class=" text-3xl "> 𝐄𝐍𝐕Ì𝐀𝐍𝐎𝐒 𝐔𝐍 𝐖𝐇𝐀𝐓𝐒𝐀𝐏𝐏 <br>  </p>
         <div class="flex flex-col justify-center items-center slef-center gap-2">
-            <a target="_blank" href="https://wa.link/meeh66"><button class="boton border-[#4700cc] border-[2px] p-4 rounded-xl bg-black font-bold justify-around gap-3 flex text-xl font-bebas   self-center">CREAR MI USUARIO <img class="w-8" src="/Assets/whatsapp-vegas.webp" alt=""></button></a>
+            <a target="_blank" href="https://wa.link/2699cf"><button class="boton border-[#4700cc] border-[2px] p-4 rounded-xl bg-black font-bold justify-around gap-3 flex text-xl font-bebas   self-center">CREAR MI USUARIO <img class="w-8" src="/Assets/whatsapp-vegas.webp" alt=""></button></a>
             <p>Mínimo de carga $1000</p>
         </div>
         <h1 class="font-semibold text-2xl">💰 PROMOS ACTIVAS 💰</h1>
